--- a/finalworkshop/src/main/resources/application.properties
+++ b/finalworkshop/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.datasource.password=javakurs
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=salefinder4@gmail.com
+spring.mail.password=Salefinder.4@gmail.com
+spring.mail.properties.mail.smtp.auth=true;
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
