--- a/finalworkshop/src/main/resources/application.properties
+++ b/finalworkshop/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/salefinder?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=javakurs
+spring.datasource.password=root
+
+server.port=8181
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
@@ -11,6 +13,7 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=salefinder4@gmail.com
 spring.mail.password=pewytkalzzncvskq
-spring.mail.properties.mail.smtp.auth=true;
+spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.smtp.ssl.trust=smtp.gmail.com
